# mcp-google-services

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FIX_OAUTH_ERROR.md  GMAIL_SETUP.md  HOW_TO_RUN_SETUP.md  LICENSE  QUICK_START.md  QUICK_TEST_USER.md  README.md  SETUP.md  USAGE.md  agents.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_oauth.py  test_auth.py  test_backup.py  test_backup_debug.py  test_export_json.py  test_gmail_server.py  test_labels.py  test_list_labels.py  test_list_messages.py  test_mcp_server.py
config/: config.example.json  env.example
docs/: AUTHENTICATION.md  BACKUP_RESTORE_COMPLETE_GUIDE.md  SCHEDULING_GUIDE.md  STORAGE_MANAGEMENT.md  TROUBLESHOOTING.md
docs/architecture/: architecture-diagrams.md  authentication-design.md  google-mcp-architecture.md
docs/services/: BACKUP_SYSTEM.md  GMAIL_API.md  MBOX_GENERATION.md
docs/specifications/: gmail-mcp-specification.md
scripts/: backup_gmail.py  cleanup_backups.py  run_backup.sh.example
src/mcp_google_services/: __init__.py  server.py
src/mcp_google_services/core/: __init__.py  auth.py  client.py  rate_limiter.py  scheduler.py
src/mcp_google_services/services/: __init__.py
src/mcp_google_services/services/gmail/: __init__.py  api.py  backup.py  export.py  mbox.py  parser.py
src/mcp_google_services/utils/: __init__.py  config.py
tests/: README.md  __init__.py
tests/test_integration/: test_gmail_end_to_end.py
tests/test_services/: __init__.py  test_gmail_integration.py
