[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-google-services"
version = "1.0.0"
description = "A comprehensive Model Context Protocol (MCP) server for Google services integration and automation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CloudBoostUP Team", email = "support@cloudboostup.com"}
]
maintainers = [
    {name = "CloudBoostUP Team", email = "support@cloudboostup.com"}
]
keywords = [
    "mcp",
    "mcp-server", 
    "google-api",
    "gmail-api",
    "automation",
    "backup",
    "model-context-protocol",
    "python",
    "google-services"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "httpx>=0.27.1",
    "google-auth>=2.17.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client[gmail,drive,calendar,sheets,docs,photos,contacts]>=2.100.0",
    "google-cloud-core>=2.3.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.0",
    "email-validator>=2.0.0",
    "mail-parser>=4.0.0",
    "croniter>=1.4.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "structlog>=23.1.0",
    "colorama>=0.4.6",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "aiofiles>=23.1.0",
    "aiohttp>=3.8.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/CloudBoostUP/mcp-google-services"
Documentation = "https://github.com/CloudBoostUP/mcp-google-services/wiki"
Repository = "https://github.com/CloudBoostUP/mcp-google-services.git"
Issues = "https://github.com/CloudBoostUP/mcp-google-services/issues"
Changelog = "https://github.com/CloudBoostUP/mcp-google-services/blob/main/CHANGELOG.md"

[project.scripts]
mcp-google-services = "mcp_google_services.server:main"
mcp-gmail = "mcp_google_services.services.gmail.cli:main"
mcp-drive = "mcp_google_services.services.drive.cli:main"
mcp-calendar = "mcp_google_services.services.calendar.cli:main"
mcp-sheets = "mcp_google_services.services.sheets.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_google_services*"]

[tool.setuptools.package-data]
mcp_google_services = ["py.typed", "*.pyi"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mcp_google_services"]
known_third_party = ["google", "pydantic", "httpx", "mcp"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "mail_parser.*",
    "croniter.*",
    "schedule.*",
    "keyring.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/mcp_google_services"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]

# Flake8 configuration
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]
